Remove map object on mobile devices.  Set map to function on tablet.  Fixed nav width.

--- a/styles/header.styl
+++ b/styles/header.styl
@@ -33,13 +33,13 @@ header
     display none
     @media $tablet
       position absolute
-      width 421px
+      width 425px
       top 50%
       transform translateY(-15%)
       right 10px
       display block
       @media $laptop
-        width 496px
+        width 500px
       @media $desktop
         right 0
       ul
